# sw_character_explorer

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
starwars/characters/: admin.py  data_operations.py  models.py  ops.py  swapi.py  urls.py  views.py
starwars/characters/migrations/: 0001_initial.py
starwars/characters/templates/characters/: base.html  collection_detail.html  collection_list.html  value_count.html
starwars/starwars/: settings.py  urls.py
