[tool.poetry]
name = "starwars"
version = "0.1.0"
description = ""
authors = ["Marcin Sokół <kobbuz@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8"
django = "<3.0"
petl = "^1.6.4"
requests = "^2.24.0"
django-extensions = "^3.0.8"
django-debug-toolbar = "^2.2"
psycopg2-binary = "^2.8.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
